--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "harapeko <github@harapeko.me>",
   "description": "hubot by harapeko",
   "dependencies": {
-    "coffeescript": "1.12.6",
+    "coffee-script": "^1.12.6",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
     "hubot-google-images": "^0.2.7",
